# dosemu2

./: .depend  .gitignore  .todo  .todo.jes  .travis.yml  BOGUS-Notes  BUGS  CONTRIBUTING.md  COPYING  COPYING.DOSEMU  ChangeLog  ChangeLog.ancient  Configure  DANG  DANG_CONFIG  DOSEMU-HOWTO  DOSEMU-HOWTO.ps  DOSEMU-HOWTO.sgml  DOSEMU-HOWTO.txt  DPR  EMUsucc.txt  EMUsuccess.txt  INDENT.PRO  INSTALL  MAKELOG  MAKELOG.2  MAKELOG.3  Makefile  Makefile.NetBSD  Makefile.common  Makefile.conf.in  Makefile.in  Makefile.linux  NEWS  NEWS.md  NEWS.old  QuickStart  README  README.CDROM  README.HOGTHRESHOLD  (+167 more)
.github/: FUNDING.yml
bios/: Makefile  bios.S
boot/: Makefile
clients/: Makefile  get_info.c  keyboard.c  ncurses.c  ncurses.h  video.c
commands/: Makefile  README  bootoff.com  booton.com  cdrom.sys  chdir.c  dosdbg.c  dosdbg.com  dosdbg.readme  dumpconf.asm  eject.com  ems.S  emufs.S  emumouse.c  exitemu.S  exitemu.com  fossil.S  isemu.asm  isemu.c  isemu.com  lredir.c  lredir.com  lredir.readme  mgarrot.a86  mouse.S  mouse.asm  mouse.c  mouse.com  pdipx.com  speed.S  speed.com  unix.c  unix.com  vgaoff.S  vgaoff.com  vgaon.S  vgaon.com
debian/: changelog  control  copyright  docs  dosemu.desktop  dosemu2-dosinstaller.install  dosemu2-otherdosinstaller.install  install  links  postinst  rules
debugger/: Makefile  README.recover  dis8086.c  dosdebug.c  mhpdbg.c  mhpdbgc.c
dexe/: check-mtools  dconfig.default  do_mtools  dosexec  extract-dos  mkdexe  myxcopy
dma/: Makefile  dma.c
doc/: DANG  DANG.ps  DANG.sgml  DANG.txt  DANG_CONFIG  DOSEMU-HOWTO.ps  DOSEMU-HOWTO.sgml  DOSEMU-HOWTO.txt  DPMIsuccess.txt  DPR  EMUfailure.html  EMUfailure.txt  EMUsuccess.txt  Known-Bugs  Makefile  Makefile.in  NOVELL-HOWTO.txt  README-tech.txt  README.CDROM  README.HOGTHRESHOLD  README.Windows  README.Winnet  README.X  README.batch  README.config  README.cpuemu  README.dexe  README.gdb  README.html  README.ibmset  README.kernel-patches  README.loglevel  README.lredir  README.mgarrot  README.newkbd  README.oldboot  README.port-io  README.runasuser  README.sound  README.txt  (+29 more)
dos2linux/: dos2linux.c
dosemu/: Makefile  bios_emm.c  cmos.c  cpu.c  data.c  detach.c  disks.c  dos2linux.c  dosio.c  dyndeb.c  emm.c  int.c  lpt.c  mutex.c  serial.c  shared.c  signal.c  sigsegv.c  timers.c  utilities.c  xms.c
dosemu.keys/: Makefile  README  dosemu.new.keymap
dosnet/: Makefile  dosnet.README  dosnet.c
dpmi/: Makefile  TODO  bcc.h  call.S  dpmi.c  dpmi.h  kernel.diff  ldt.c  ldtlib.c  meminfo.c  meminfo.h  memory.c  msdos.h  prototypes.h  testdpmi.S  win31.h  (+2 more)
src/plugin/X/: .autom4te.cfg  Makefile  Makefile.conf.in  X.c  X.h  X_font.c  X_keymaps.c  X_keysyms.c  X_speaker.c  configure.ac  keyb_X.c  keyb_X.h  keyb_X_keycode.c  screen.c  screen.h
src/plugin/X/config/: plugin_config.h
src/plugin/X/include/: keyb_X.h
src/plugin/X/m4/: fontutil.m4
src/plugin/Xkmaps/: Makefile  Makefile.conf.in  X_keymaps.c  X_keysyms.c  configure.ac
src/plugin/Xkmaps/config/: plugin_config.h
src/plugin/debugger/: Changelog  Makefile  Makefile.conf.in  configure.ac  dis8086.c  dosdebug.c  mhpdbg.c  mhpdbgc.c
src/plugin/debugger/config/: plugin_config.h
src/plugin/dj64/: Makefile  Makefile.conf.in  coff.c  coff.h  configure.ac  djdev64.c  djdev64.h  dpmiops.c  dpmiops.h  dpmiwrp.c  dpmiwrp.h  elf.c  elf.h  elfp.h  stub.c  stub.h  stub_ex.h  stub_priv.h  stubinfo.h  util.c  util.h
src/plugin/dj64/config/: plugin_config.h
src/plugin/dosdrv/: Makefile  Makefile.conf.in  aspi.s  cdrom.s  configure.ac  ems.s  emufs.s  fossil.s  isemu.s  umb.s  xms.inc
src/plugin/fdpp/: Makefile  Makefile.conf.in  boot.c  boot.h  configure.ac  fdpp.c  hooks.c  hooks.h  vgdbg.c  vgdbg.h
src/plugin/fdpp/config/: plugin_config.h
src/plugin/fluidsynth/: Makefile  Makefile.conf.in  configure.ac  fluid_midi.c  fluid_midi.h  mid_o_file.c  mid_o_flus.c
src/plugin/fluidsynth/config/: plugin_config.h
src/plugin/fluidsynth/fluid_rip/: fluid_midi.c  fluid_midi.h  fluid_seqbind.c  seqbind.h
src/plugin/ieee1284/: Makefile  Makefile.conf.in  configure.ac  opl2lpt.c
src/plugin/ieee1284/config/: plugin_config.h
src/plugin/kbd_unicode/: Makefile  acconfig.h  configure  configure.ac  configure.in  dosemu_keys.c  getfd.c  getfd.h  keyb_X.c  keyb_X.h  keyb_X_keycode.c  keyb_clients.c  keyb_none.c  keyb_raw.c  keyboard.c  keymaps.c  keynum.c  keynum.h  keystate.h  prestroke.c  serv_8042.c  serv_backend.c  serv_xlat.c
src/plugin/kbd_unicode/config/: plugin_config.h  plugin_lexer  plugin_parser
src/plugin/kbd_unicode/doc/README/: X  config  config-tech  newkbd
src/plugin/kbd_unicode/include/: _kbd_unicode_config.h.in  kbd_unicode_config.h  kbd_unicode_config.h.in  keyb_clients.h  keyb_server.h  keyboard.h  keymaps.h
src/plugin/libao/: .autom4te.cfg  Makefile  Makefile.conf.in  ao_init.c  ao_init.h  configure.ac  snd_o_ao.c  snd_o_ao_file.c
src/plugin/libao/config/: plugin_config.h
src/plugin/libao/m4/: ao.m4
src/plugin/munt/: Makefile  Makefile.conf.in  configure.ac  munt.c
src/plugin/munt/config/: plugin_config.h
src/plugin/openglide/: Makefile  Makefile.conf.in  configure.ac  glide2x.h  openglide.c  thunks.i
src/plugin/openglide/config/: plugin_close.h  plugin_config.h  plugin_init.h
src/plugin/sdl/: Makefile  Makefile.conf.in  clip_SDL.c  clip_SDL.h  configure  configure.ac  keyb_SDL.c  keyb_SDL.h  mouse_SDL.c  sdl.c  sdl.h  sdl2-keymap.h  snd_o_SDL.c  timer_SDL.c
src/plugin/sdl/config/: plugin_config.h  plugin_config.h.in
src/plugin/sdl/include/: _sdl_config.h.in  sdl_config.h.in
src/plugin/sdl/m4/: sdl2.m4
src/plugin/searpc/: Makefile  Makefile.conf.in  configure.ac  fslib_be.c  fsrpcdefs.h  fssvc.c  rpc_table.py  test-object.h
src/plugin/searpc/config/: plugin_config.h
src/plugin/svgalib/: Makefile  Makefile.conf.in  configure.ac  svgalib.c  svgalib.h
src/plugin/svgalib/config/: plugin_config.h
src/plugin/term/: Makefile  Makefile.conf.in  clip_term.c  configure.ac  env_term.h  keyb_slang.c  mouse_gpm.c  mouse_xterm.c  term_core.c  terminal.c
src/plugin/term/config/: plugin_config.h
(+2070 files in other folders)
